{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 13,
  "lineage": "339bcbd5-2dab-a1fe-c8b6-9817c008d5d7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626002901488:internet-gateway/igw-09b2b89a35f9f0e1b",
            "id": "igw-09b2b89a35f9f0e1b",
            "owner_id": "626002901488",
            "tags": {
              "Name": "checkpoint-gw"
            },
            "tags_all": {
              "Name": "checkpoint-gw"
            },
            "vpc_id": "vpc-0357c09670cb68911"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626002901488:route-table/rtb-0be49de2612309f3f",
            "id": "rtb-0be49de2612309f3f",
            "owner_id": "626002901488",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09b2b89a35f9f0e1b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "checkpoint-rt"
            },
            "tags_all": {
              "Name": "checkpoint-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0357c09670cb68911"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fe039c5a8c9165d",
            "route_table_id": "rtb-0be49de2612309f3f",
            "subnet_id": "subnet-044a03ec4f1a45ced"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.subnet0",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "checkpoint-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626002901488:security-group/sg-0fa7ca5e96850ce42",
            "description": "Allow SSH \u0026 HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa7ca5e96850ce42",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "checkpoint-sg",
            "name_prefix": "",
            "owner_id": "626002901488",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "checkpoint-sg"
            },
            "tags_all": {
              "Name": "checkpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0357c09670cb68911"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626002901488:subnet/subnet-044a03ec4f1a45ced",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.30.0/24",
            "id": "subnet-044a03ec4f1a45ced",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "626002901488",
            "tags": {
              "Name": "checkpoint-subnet"
            },
            "tags_all": {
              "Name": "checkpoint-subnet"
            },
            "vpc_id": "vpc-0357c09670cb68911"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626002901488:vpc/vpc-0357c09670cb68911",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00be0f97e50494314",
            "default_route_table_id": "rtb-0e53417cf49bb7e66",
            "default_security_group_id": "sg-02fd338ce69396104",
            "dhcp_options_id": "dopt-0ae9f2ae68a25d18b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0357c09670cb68911",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e53417cf49bb7e66",
            "owner_id": "626002901488",
            "tags": {
              "Name": "checkpoint-vpc"
            },
            "tags_all": {
              "Name": "checkpoint-vpc"
            }
          }
        }
      ]
    }
  ]
}